<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/popup"
    android:layout_height="wrap_content"
    android:background="#000"
    android:padding="15dp"
    android:orientation="vertical"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:padding="15dp"
        >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/helpScroll"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_alignParentTop="true">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFF"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/help_heading"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginTop="5dp"
                        android:text="@string/help_sub_heading" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginTop="5dp"
                        android:text="@string/help_mls" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="If the nutritional content on the pack reads Value Per 100g/ml but you want to have 175g/ml, Then you would enter 100 in the Value Per Field and then Enter 175 in the Servings Field." />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginTop="15dp"
                        android:text="@string/help_portion" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="If the nutritional content on the pack reads Value per 1 Serving but you want to have 2 Servings, then you would enter in 1 for the Value Per Field and 2 in the Servings Field" />
                </LinearLayout>
            </ScrollView>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/helpScroll"
                android:background="#FFF"
                android:orientation="vertical">

                <Button
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="Close" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>